[package]
name = "fast-noise-lite-rs"
version = "0.8.0"
edition = "2021"
repository = "https://github.com/engusmaze/fast-noise-lite-rs"
homepage = "https://github.com/engusmaze/fast-noise-lite-rs"
authors = ["EngusMaze"]
license = "Apache-2.0 OR MIT"
exclude = ["*.png"]
description = "FastNoise Lite written in rust"
readme = "README.md"
tags = ["fastnoise", "lite", "simplex", "perlin", "noise", "fbm", "hash"]

[dev-dependencies]
image = "0.24.3"
