[package]
name = "fast-noise-lite-rs"
version = "0.8.0"
edition = "2021"
authors = ["EngusMaze"]
description = "FastNoise Lite written in rust"
tags = ["fastnoise", "lite", "simplex", "perlin", "noise", "fbm", "hash"]
repository = "https://github.com/engusmaze/fast-noise-lite-rs"
homepage = "https://github.com/engusmaze/fast-noise-lite-rs"
license = "Apache-2.0 OR MIT"
readme = "README.md"
exclude = ["*.png"]

[dev-dependencies]
image = { version = "0.24.6", default-features = false, features = ["png"] }
